@@ -22,6 +22,8 @@ Changes since version 0.70.0:
   an application will keep the shaded/unshaded state of windows.)
 - Removed compile time option for definable cursors and made them available by
   default.
+- Mapping a new window that belongs to a running application that is hidden,
+  will unhide the application.
 
 
 Changes since version 0.65.1:
